--- a/endterm/docker-compose.yml
+++ b/endterm/docker-compose.yml
@@ -10,6 +10,10 @@ services:
 #      - DJANGO_SETTINGS_MODULE=endterm.settings
 #    volumes:
 #      - .:/app
+  redis:
+    image: redis:latest
+    ports:
+      - "6379:6379"
   prometheus:
    image: prom/prometheus:latest
    volumes:
